--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "stability-client": "^1.0.0",
     "uuid": "^9.0.0",
     "ws": "^8.16.0",
-    "yt-search": "^2.13.1"
+    "yt-search": "^2.13.1",
+    "link-preview-js": "^2.2.1"
   },
   "repository": {
     "type": "git",
