--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-fetch": "^3.3.2",
     "openai": "^4.12.0",
     "pdf-lib": "^1.17.1",
+    "ytdl-core": "^4.11.0",
     "pino": "^8.21.0",
     "play-dl": "^1.9.7",
     "qrcode-terminal": "^0.12.0",
