--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "openai": "^4.12.0",
     "pdf-lib": "^1.17.1",
     "ytdl-core": "^4.11.0",
-    "pino": "^8.21.0",
     "play-dl": "^1.9.7",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.34.3",
@@ -31,6 +30,7 @@
     "uuid": "^9.0.0",
     "ws": "^8.16.0",
     "yt-search": "^2.13.1",
+    "ytpl": "^2.5.6",
     "link-preview-js": "^3.1.0"
   },
   "repository": {
